--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -39,7 +39,7 @@
                     android:contentDescription="@string/empty" />
 
                 <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/roundedImageView2"
+                    android:id="@+id/background_avatar_profile"
                     android:layout_width="68dp"
                     android:layout_height="68dp"
                     android:src="@color/white"
@@ -52,6 +52,7 @@
 
                 <com.makeramen.roundedimageview.RoundedImageView
                     android:id="@+id/img_avatar_profile"
+                    android:transitionName="@string/user_profile_transition"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:layout_marginStart="16dp"
@@ -139,7 +140,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="4dp"
+                    android:autoLink="all"
                     android:text="@string/link"
+                    android:textColorLink="@color/colorAccent"
                     android:textSize="@dimen/textSize16sp"
                     app:layout_constraintStart_toEndOf="@+id/ic_link"
                     app:layout_constraintTop_toBottomOf="@+id/tv_location_profile" />
